fix: update the gap in the tabs

--- a/src/components/common/PhilTab/PhilTab.module.css
+++ b/src/components/common/PhilTab/PhilTab.module.css
@@ -84,7 +84,6 @@
 
         flex-direction: column;
         border-left: 1px solid #ddd;
-        padding-left: 12px;
         min-width: 160px;
 
         .tab {
@@ -94,7 +93,6 @@
 
         .tab.active {
           border-left-color: #09aaa5;
-          margin-left: -12px;
           padding-left: 9px;
         }
       }
@@ -105,6 +103,7 @@
 
       @media (min-width: $phil-breakpoint-md) {
         flex-direction: row;
+        gap: 60px;
       }
     }
   }
